# ocr-plantuml-web

./: QUICKSTART.md  README.md  kek.py  main.py  pyproject.toml
batch_outputs/: 1.json  2.json  2_1.json  2_18.json  2_19.json  2_5.json  2_6.json  3.json  3_1.json  3_16.json  3_17.json  3_3.json  4_10.json  4_12.json  4_16.json  4_23.json  4_5.json  4_7.json  4_8.json  4_9.json  5_10.json  5_2.json  5_5.json  5_6.json  5_9.json
src/: __init__.py  comparator.py  config.py  main.py  run_app.py  services.py
src/static/css/: styles.css
src/static/js/: app.js
src/templates/: base.html  compare.html  compare_results.html  index.html  preview.html  results.html
src/uploads/: 4_3.puml
src/uploads/CAqGCurxGfSCv-WITsFBXA/: 4_2.json  results.json
src/uploads/NZi3lzq6TpK_vu_Ylo8n9Q/: results.json
src/uploads/l1TYDaRYuJA2bmttHEp9-g/: 4_3.json
src/uploads/qBmvaJoMgy_8Hcu7rp7Kkg/: 1.puml  10.puml  11.json  11.puml  2_1.puml  2_11.json  2_11.puml  2_12.json  2_13.json  2_14.json  2_16.json  2_16.puml  2_17.json  2_18.puml  2_20.puml  2_21.json  2_22.puml  2_23.json  2_23.puml  2_27.puml  2_29.json  2_30.json  2_6.puml  3.puml  3_1.puml  3_12.json  3_13.json  3_14.puml  3_15.puml  3_19.puml  3_20.json  3_20.puml  3_5.json  3_6.json  3_7.puml  3_8.puml  3_9.json  4.json  4_1.json  4_1.puml  (+20 more)
src/uploads/t43wreERHYSs9ELz4ejiFA/: 2.puml  2_10.puml  2_12.puml  2_15.json  2_15.puml  2_17.puml  2_2.puml  2_20.json  2_21.puml  2_22.json  2_24.json  2_24.puml  2_25.json  2_26.puml  2_27.json  2_28.json  2_28.puml  2_29.puml  2_3.json  2_4.json  (+36 more)
tests/: test_web_main.py
(+47 files in other folders)
